Save slot number to handle data
